# POISON_PROOF-AI-V2

./: .gitignore  DATASET_GUIDE.md  DATASET_SUMMARY.md  FEATURES.md  PROJECT_ARCHITECTURE.md  README.md  ROADMAP.md  SoI_Prototype_Template_27Dec2025 (1) (1).pptx  TRAINING_QUICKSTART.md  USER_GUIDE.md  app.py  app_fixed.py  config.py  generate_training_dataset.py  model_trainer.py  pyproject.toml  requirements.txt  run.py  sample_data.csv  test_app.py  training_dataset.csv
scanners/: __init__.py  audio_scanner.py  base.py  image_scanner.py  registry.py  tabular_scanner.py  text_scanner.py  vector_scanner.py
static/css/: style.css
static/js/: cyber_effects.js  main.js  train_console.js
templates/: base.html  chatbot.html  clean.html  index.html  models.html  multimedia_scan.html  results.html  review.html  train.html  train_live.html  upload.html
trained_models/: LogisticRegression_1774517853.pkl  LogisticRegression_1774518703.pkl  SVC_1767762535.pkl  model_1762270057.pkl  model_1762274063.pkl  model_1762276611.pkl  model_hashes.json
utils/: chatbot.py  chatbot_clean.py  chatbot_fixed.py  cleaner.py  detection.py  multimedia_vae.py  security.py
